2005-04-22  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-generic/syscall.h: Add conforming domain
	exec bit, ensuring that calling shadows are switched to primary
	mode before entering the syscall, whilst the latter is fired over
	the Linux domain for regular Linux tasks.

	* skins/psos+/demos, skins/vxworks/demos: Create per-skin demo
	directory, illustrating the use of the RTOS emulators over the UVM
	and simulator engines.

2005-04-20  Philippe Gerum  <rpm@xenomai.org>

	* arch/*/Kconfig: Give better hints about setting RTAI_HW_FPU.

2005-04-18  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.7.2

2005-04-17  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Add preliminary support for experimental
	PREEMPT_RT kernels over Adeos: 2.6.12-rc2-RT-V0.7.44-03.

	* nucleus/shadow.c (xnshadow_start): Set CPU affinity as defined
	by xnpod_start_thread().

	* arch/i386/patches: Upgrade to Adeos 2.6.9,10,11-i386-r10c3.
	
	* skins/rtai/syscall.c (__rt_task_create): Pass the new task's CPU
	affinity settings to rt_task_create() as needed.

	* include/asm-generic/syscall.h: Generic low-level bits for
	syscall support; formerly include/nucleus/syscall.h.

2005-04-16  Philippe Gerum  <rpm@xenomai.org>

	* arch/generic/hal: Rename "sysreq" support to APC
	(i.e. Asynchronous Procedure Call), so that we stop conflicting
	uselessly with Linux's (totally unrelated) sysrq feature.  Also
	globally revamp all HAL service names to get more consistent with
	upper layers.

	* include/nucleus/asm-i386/hal.h: Revert last change and make sure
	we _never_ program the local APIC with a null delay: this
	definitely breaks with many APIC timers, stopping the countdown
	instead of causing an interrupt to be triggered immediately.

	* arch/ppc/patches: Upgrade to Adeos 2.6.10-ppc-r7c1.

2005-04-15  Philippe Gerum  <rpm@xenomai.org>

	* arch/generic/hal (generic.c):
	* include/nucleus/asm-generic (hal.h, system.h): Allow
	arch-level code do share arch-independent bits.