@@ -540,10 +540,15 @@ static int __rt_task_set_mode (struct task_struct *curr, struct pt_regs *regs)
     clrmask = __xn_reg_arg1(regs);
     setmask = __xn_reg_arg2(regs);
 
-    err = rt_task_set_mode(setmask,clrmask,&mode_r);
+    err = rt_task_set_mode(setmask & ~T_PRIMARY,clrmask & ~T_PRIMARY,&mode_r);
 
     if (!err && __xn_reg_arg3(regs))
+	{
 	__xn_copy_to_user(curr,(void __user *)__xn_reg_arg3(regs),&mode_r,sizeof(mode_r));
+
+	if ((clrmask & T_PRIMARY) != 0)
+	    xnshadow_relax();
+	}
 
     return err;
 }
