@@ -44,6 +44,7 @@
 #define T_RRB     XNRRB
 #define T_NOSIG   XNASDI
 #define T_SHIELD  XNSHIELD
+#define T_PRIMARY XNTHREAD_SPARE0
 
 /* Task hook types. */
 #define T_HOOK_START  XNHOOK_THREAD_START
@@ -61,7 +62,7 @@ typedef struct rt_task_placeholder {
 } RT_TASK_PLACEHOLDER;
 
 #define RT_TASK_STATUS_MASK \
-(T_FPU|T_BLOCKED|T_DELAYED|T_READY|T_DORMANT|T_STARTED|T_BOOST|T_LOCK|T_RRB)
+(T_FPU|T_BLOCKED|T_DELAYED|T_READY|T_DORMANT|T_STARTED|T_BOOST|T_LOCK|T_RRB|T_NOSIG|T_SHIELD)
 
 struct rt_queue_msg;
 
